--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
+/* font-family: 'Fjalla One', sans-serif; */
+
 * {
      margin: 0;
      padding: 0;
@@ -5,5 +8,31 @@
 
 body{
      width: 100%;
+     font-family: 'Fjalla One', sans-serif;
 }
 
+.header  {
+     width: 100%;
+     height: 100vh;
+     display: grid;
+     grid-template-columns: 40% 60%;
+     /* border: solid green 2px ; */
+}
+
+.self-intro {
+     /* border: red solid 2px; */
+     width: 60%;
+     position: relative;
+     left: 30%;
+}
+
+.intro-paragraph {
+     /* border:solid blue 2px ; */
+     width: 50%;
+     position: relative;
+     left: 20%;
+}
+
+.self-intro > h1 {
+     font-size: 124px;
+}
