--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
 /* font-family: 'Fjalla One', sans-serif; */
 
@@ -16,6 +17,8 @@ body{
      height: 100vh;
      display: grid;
      grid-template-columns: 40% 60%;
+     background: black;
+     color: white;
      /* border: solid green 2px ; */
 }
 
