--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,118 @@ body{
      top: 20px;
 }
 
+.intro-paragraph {
+     position: relative;
+}
 
 .intro-paragraph > p {
      font-size: 23px;
-     position: relative;
+     position: absolute;
      left: 20%;
      top: 30%;
      width: 50%;
+}
+
+.button {
+     background: white;
+     position: relative;
+     left: 40%;
+     top: 55%;
+     /* transform: translate(-50%, -50%); */
+}
+
+.button:hover{
+     background: rgb(20, 20, 20);
+     color: white;
+}
+
+#overlay {
+     width: 100%;
+     height: 100vh;
+     background: rgba(0, 0, 0, .8);
+     position: fixed;
+     left: 0;
+     top: 0;
+     z-index: 99;
+}
+
+.spinner {
+     width: 50px;
+     height: 50px;
+     /* border: solid 2px rgb(31, 180, 226); */
+     position: absolute;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     margin: auto;
+     border-top: solid red 2px;
+     border-radius: 100%;
+     animation: spin 1s infinite linear;
+}
+
+.spinner2 {
+     content: '';
+     /* border: solid white 3px; */
+     position: absolute;
+     width: 40px;
+     height: 40px;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     margin: auto;
+     border-bottom: solid red 2px;
+     border-radius: 100%;
+     animation: antispin 1s infinite linear;
+}
+
+#overlay> p{
+     /* color: white; */
+     position: absolute;
+     /* border: solid red 1px; */
+     top: 50%;
+     left: 52%;
+     transform: translate(0%, -50%);
+     animation: colorShow 1s infinite linear;
+}
+
+
+
+
+@keyframes spin {
+     from {
+          transform: rotate(0deg);
+     }
+
+     50% {
+          border-top: solid 2px rgb(240, 240, 240);
+     }
+
+     to {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes antispin {
+     from {
+          transform: rotate(360deg);
+     }
+
+     50% {
+          border-bottom: solid 2px rgb(240, 240, 240);
+     }
+
+     to {
+          transform: rotate(0deg);
+     }
+}
+
+@keyframes colorShow {
+     from {
+          color: white;
+     }
+     to {
+          color:red;
+     }
 }
