--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body{
 
 .header  {
      width: 100%;
-     height: 100vh;
+     height: 97vh;
      display: grid;
      grid-template-columns: 40% 60%;
      background: black;
@@ -28,6 +28,10 @@ body{
      position: relative;
      left: 30%;
      top: 20px;
+}
+
+#span {
+     text-decoration: overline rgb(43, 43, 51);
 }
 
 .intro-paragraph {
@@ -45,9 +49,8 @@ body{
 .button {
      background: white;
      position: relative;
-     left: 40%;
+     left: 38%;
      top: 55%;
-     /* transform: translate(-50%, -50%); */
 }
 
 .button:hover{
@@ -97,17 +100,27 @@ body{
 }
 
 #overlay> p{
-     /* color: white; */
      position: absolute;
-     /* border: solid red 1px; */
      top: 50%;
      left: 52%;
      transform: translate(0%, -50%);
      animation: colorShow 1s infinite linear;
 }
 
+#aboutMe{
+     margin-top: 20px;
+}
 
+.abouhead > h3 {
+     text-align: center;
+     color: rgb(207, 207, 207);
+     text-decoration: overline black;
+}
 
+.abouinformation {
+     display: grid;
+     grid-template-columns: 40% 60%;
+}
 
 @keyframes spin {
      from {
