--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
 /* font-family: 'Fjalla One', sans-serif; */
@@ -121,6 +122,97 @@ body{
      display: grid;
      grid-template-columns:50% 50%;
 }
+
+.github_info {
+     /* border: solid red 2px; */
+     /* background: black; */
+     color:rgb(207, 207, 207);
+     margin-left: 10px;
+}
+
+.github_info > h4,p {
+     margin: 10px;
+}
+
+.github_info > ul{
+     margin-left: 40px;
+}
+
+.btn1{
+     background: rgb(207, 207, 207) ;
+     color: rgb(107, 50, 29);
+}
+
+.btn1:hover {
+     color:rgb(207, 207, 207);
+     background: rgb(107, 50, 29);
+}
+
+.btn2 {
+     background: black;
+     color:rgb(207, 207, 207);
+}
+
+.btn2:hover {
+     background: rgb(207, 207, 207);
+     color: black;
+}
+
+.neighbour_image {
+     margin-left: 10px;
+}
+
+.neighbour_image ,
+.neighbour_info {
+     margin-top: 20px;
+     margin-bottom: 20px;
+}
+
+.neighbour_info > ul {
+     margin-left: 30px;
+}
+
+.neighbour_info > p {
+     margin-left: 0px;
+}
+
+footer {
+     background: black;
+     color: rgb(207, 207, 207);
+}
+
+footer h4 {
+     text-align: center;
+}
+
+.socialLinks {
+     /* border: solid blue 1px; */
+     display: flex;
+     justify-content: space-around;
+     padding: 8px;
+}
+
+.icos {
+     width: 40px;
+     height: 40px;
+     /* border: solid crimson 2px; */
+     /* position: relative; */
+}
+
+.icos::before {
+     content: '';
+     position: absolute;
+     border: solid red 2px;
+     left: 0;
+     top: 0;
+     width: 100%;
+     /* height: 100%; */
+     /* display: block; */
+     background: red;
+     /* pointer-events: none;
+     cursor: pointer; */
+}
+
 @keyframes spin {
      from {
           transform: rotate(0deg);
