--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,10 @@ body{
      grid-template-columns:50% 50%;
 }
 
+.github_image {
+     box-sizing: border-box;
+}
+
 .github_info {
      /* border: solid red 2px; */
      /* background: black; */
@@ -178,23 +182,19 @@ body{
 
 footer {
      background: black;
-     color: rgb(207, 207, 207);
+     color: rgb(78, 77, 77);
 }
 
 footer h4 {
      text-align: center;
 }
 
-.socialLinks {
-     /* border: solid blue 1px; */
-     display: flex;
-     justify-content: space-around;
-     padding: 8px;
-}
-
 .icos {
      width: 40px;
      height: 40px;
+     border-radius: 5px;
+     box-sizing: border-box;
+     box-shadow: rgb(216, 22, 61, .7) 2px 2px 10px;
      /* border: solid crimson 2px; */
      /* position: relative; */
 }
@@ -207,10 +207,71 @@ footer h4 {
      top: 0;
      width: 100%;
      /* height: 100%; */
-     /* display: block; */
+     display: block;
      background: red;
+     /* box-sizing: border-box;
+     box-shadow: rgb(216, 22, 61, .7)  2px 2px; */
      /* pointer-events: none;
      cursor: pointer; */
+
+}
+
+.connect_intro h5 {
+     color: rgb(78, 77, 77);
+}
+
+address  {
+     align-items: center;
+}
+
+.connect_info {
+     display: flex;
+     justify-content: space-evenly;
+}
+
+.me {
+     /* border: solid red 1px; */
+     display:flex;
+     width: 400px;
+     height: 150px;
+     align-items: center;
+}
+
+
+.me img{
+     width: 120px;
+     height: auto;
+} 
+
+.socialmedia {
+     /* display: flex; */
+     /* border: solid maroon 1px; */
+     width: 40px;
+     /* background: white; */
+     position: fixed;
+     top: 47%;
+     right: 0;
+     transform: translateY(-50%);
+     /* position: fixed; */
+     /* justify-content: end; */
+}
+
+.socialmedia a {
+     color: rgb(106, 106, 236);
+}
+
+.me a {
+     color: rgb(121, 121, 121);
+}
+
+.me a:hover{
+     text-decoration: dashed;
+     color: rgb(83, 76, 77);
+}
+
+
+.socialmedia a:hover{
+     color: crimson;
 }
 
 @keyframes spin {
@@ -226,6 +287,8 @@ footer h4 {
           transform: rotate(360deg);
      }
 }
+
+
 
 @keyframes antispin {
      from {
